Fixed Bug #42838 (Wrong results in array_diff_uassoc)